[tool.poetry]
name = "extism"
version = "0.0.0+replaced-by-ci"
description = "Extism Host SDK for python"
authors = ["The Extism Authors <oss@extism.org>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.10.0"
extism-sys = "^0.5.3"
annotated-types = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
sphinx = "^7.2.6"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
