[tool.poetry]
name = "extism"
version = "0.0.0+replaced-by-ci"
description = "Extism Host SDK for python"
authors = ["The Extism Authors <oss@extism.org>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.10.0"
extism-sys = {version = "^1.0.0rc7", allow-prereleases = true}
annotated-types = "^0.6.0"

[tool.poetry.dev-dependencies]
python = "^3.8"
black = "^23.1.0"
sphinx = { version = "^7.2.6", python = "^3.9" }

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = { version = "^1.3.0", python = "^3.9" }
sphinx-autodoc-typehints = { version = "^1.24.0", python = "^3.9" }
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
