[project]
authors = [{ email = "oss@extism.org", name = "The Extism Authors" }]
name = "extism"
version = "0.0.0+replaced-by-ci"
description = "Extism Host SDK for python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["extism-sys>=1.9.0"]

[tool.poetry]
name = "extism"
version = "0.0.0+replaced-by-ci"
description = "Extism Host SDK for python"
authors = ["The Extism Authors <oss@extism.org>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.10.0"
extism-sys = { version = ">=1.9.0" }
annotated-types = "^0.6.0"

[tool.poetry.dev-dependencies]
python = "^3.8"
black = "^23.1.0"
sphinx = { version = "^7.2.6", python = "^3.9" }

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = { version = "^1.3.0", python = "^3.9" }
sphinx-autodoc-typehints = { version = "^1.24.0", python = "^3.9" }
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "black>=24.10.0",
  "mypy>=1.13.0",
  "sphinx-autodoc-typehints>=2.5.0",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx>=8.1.3",
]
