[metadata]
name = extism
description = Extism Host SDK for Rust
long_description_content_type = text/markdown
url = https://github.com/extism/python-sdk
project_urls =
    Bug Tracker = https://github.com/extism/python-sdk/issues
    Changelog = https://github.com/extism/python-sdk/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
